; ModuleID = '/home/carl/AnghaBench/xhyve/src/extr_mevent_test.c_rdtsc.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/extr_mevent_test.c_rdtsc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @rdtsc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rdtsc() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  call void asm sideeffect "cpuid", "~{dirflag},~{fpsr},~{flags}"() #1, !srcloc !2
  %3 = call { i32, i32 } asm sideeffect "rdtsc", "={ax},={dx},~{dirflag},~{fpsr},~{flags}"() #1, !srcloc !3
  %4 = extractvalue { i32, i32 } %3, 0
  %5 = extractvalue { i32, i32 } %3, 1
  store i32 %4, i32* %1, align 4
  store i32 %5, i32* %2, align 4
  %6 = load i32, i32* %1, align 4
  %7 = load i32, i32* %2, align 4
  %8 = shl i32 %7, 32
  %9 = or i32 %6, %8
  ret i32 %9
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{i32 265}
!3 = !{i32 298}
